Bug 1219391 - Request snapping for the entire handoff chain when ending the fling animation. r=botond